--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
     />
 
+
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="icon"
@@ -15,6 +16,7 @@
       href="./assets/favicon.svg"
     />
     <title>Kanban Task Management</title>
+    <script src="script.js"></script>
   </head>
 
   <body>
